--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,6 @@ dependencies {
      compile project(':XTestKit')
     compile project(':XTestKitComponents')
     compile project(':JavaUtilities')
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.slf4j:slf4j-log4j12:1.7.18'
 }
